# testdjango

./: db.sqlite3  pyproject.toml
test_app/: a.md  admin.py  better_brief_432.md  forms.py  models.py  signals.py  tests.py  urls.py  views.py
test_app/migrations/: 0001_initial.py
test_app/templates/test_app/: base.html  friend_request_create.html  friend_request_list.html  group_create.html  group_detail.html  group_list.html  group_update.html  message_create.html  message_list.html  post_detail.html  post_list.html  profile_detail.html  profile_update.html
testdjango/: settings.py  urls.py
